--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,700&display=swap');
+
 body {
-    margin :0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    background-color: #f7f7f7;
+}
+
+.main-content {
+    background-color: #ffffff;
+    padding: 5%;
+    border-radius: 50px;
+    width: 65%;
+    margin: 0 auto;
+    display: flex;
+    margin: auto 0 auto 0;
 }
