--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,27 @@ body {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     background-color: #f7f7f7;
+    color: #222;
 }
 
 .main-content {
     background-color: #ffffff;
-    padding: 5%;
+    padding: 3%;
     border-radius: 50px;
-    width: 65%;
-    margin: 0 auto;
+    width: 60%;
     display: flex;
-    margin: auto 0 auto 0;
+    margin: auto;
+    flex-direction: column;
+}
+
+.button {
+    width: 15%;
+    margin: 2% auto;
+    padding: 1.5%;
+    border: none;
+    font-size: 0.9rem;
+    background-color: #8444df;
+    color: white;
+    letter-spacing: 1px;
+    border-radius: 40px;
 }
