--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -14,20 +14,44 @@ body {
     font-size: 18px;
 }
 
+.pageWrapper {
+    padding: 0 33px;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 .main-content {
-    background-color: #ffffff;
-    padding: 3%;
-    border-radius: 50px;
-    width: 60%;
     display: flex;
-    margin: auto;
-    flex-direction: column;
+    justify-content: center;
+}
+
+.padding {
+    padding: 80px 0;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-intro {
+    color: white;
+    border: none;
+    background-color: #8444df;
+    padding: 15px 35px;
+    border-radius: 40px;
+    letter-spacing: 2px;
+    font-size: 0.9rem;
+    font-weight: 300;
+    display: inline-block;
 }
 
 .button {
-    width: 15%;
     margin: 2% auto;
     padding: 1.5%;
+    display: block;
+    width: 15%;
     border: none;
     font-size: 0.9rem;
     background-color: #8444df;
@@ -36,19 +60,38 @@ body {
     border-radius: 40px;
 }
 
+.color-text {
+    color: #8444df;
+}
+
+.heading {
+    margin-bottom: 50px;
+}
+
 .headings span:before {
     content: "";
     float: left;
-    margin: 1% 2% 0 0%;
+    margin: 0.7% 2% 0 0%;
     width: 50px;
     height: 1px;
     background: #333;
 }
 
-.color-text {
-    color: #8444df;
+.headings span {
+    display: block;
+    font-size: 10px;
+    letter-spacing: 1px
 }
 
-img {
-    background: url('');
+.headings p {
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-size: 1.6rem;
+    margin-top: 15px;
+}
+
+.sectionContain {
+    background-color: white;
+    border-radius: 50px;
+    padding: 48px;
 }
