--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    background-color: #f7f7f7;
+    /* background-color: #d87979; */
     color: #222;
     font-size: 18px;
 }
@@ -70,8 +70,9 @@ body {
     color: #8444df;
 }
 
-.heading {
+.headings {
     margin-bottom: 50px;
+    color: #fff;
 }
 
 .headings span:before {
@@ -80,7 +81,7 @@ body {
     margin: 0.7% 2% 0 0%;
     width: 50px;
     height: 1px;
-    background: #333;
+    background: #fff;
 }
 
 .headings span {
@@ -105,8 +106,11 @@ body {
 @media (max-width: 768px) {  
     .sectionContain {
     padding: 0;
-    background-color: transparent;
+    background-color: rgba(0,0,0, 0.4);
     border-radius: 0px;
+    color: #fff;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 }
