--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    /* background-color: #d87979; */
     color: #222;
     font-size: 18px;
 }
@@ -51,6 +50,16 @@ body {
     font-size: 0.9rem;
     font-weight: 300;
     display: inline-block;
+}
+
+.button, .button-intro {
+    box-shadow: 0px 4px 6px rgb(134 151 168/10%);
+    display: inline-block;
+    cursor: pointer;
+}
+
+.button:hover, .button-intro:hover {
+    box-shadow: 0 7px 15px rgba(0, 0, 0, 0.2);
 }
 
 .button {
@@ -114,11 +123,7 @@ body {
 }
 
 @media (max-width: 499px) {  
-    .sectionContain {
-        background-color: rgba(0,0,0, 0.4);
-        border-radius: 0px;
-        color: #fff;
-        border-radius: 20px;
-        padding: 20px;
-    }   
+    .pageWrapper {
+    padding: 0 10px;
+    }
 }
