--- a/src/components/Sidebar/nav.css
+++ b/src/components/Sidebar/nav.css
@@ -10,11 +10,19 @@
     visibility: visible;
     }
 
-    .navbar, .navbar-toggle {
+    .navbar {
+    position: fixed;
+    right: 0;
+    visibility: visible;
+    padding: 0 5% 0 0;
+    }
+
+    .navbar-toggle {
     position: absolute;
     right: 0;
     visibility: visible;
     padding: 0 5% 0 0;
+    margin: 10% 5% 0 0;
     }
 
     .fa-bars:before {
@@ -39,7 +47,7 @@
     transition: 850ms;
     }
 
-    .nav-menu.active {
+    .nav-menu .active {
     left: 0;
     transition: 350ms;
     }
